--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Reece's beach</title>
     <link rel='stylesheet' type='text/css' href='main.css'>
-    <script src="http://maps.googleapis.com/maps/api/js"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyC8znEhrkiEIXnVwPJ_ARkupMJJdx03wMg"></script>
     <script src="app.js"></script>
     <script src="mapWrapper.js"></script>
   </head>
